update build.gradle.kts to work with java1.8